Full App Change

--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,27 @@
+<!--
+Author: Vien Trieu (Date: 6-27-2025)
+Description: HTML template for the Vite + React application, defines metadata, root element, and includes the main script.
+-->
+
 <!doctype html>
 <html lang="en">
+  <!-- === Head =============================================================== -->
   <head>
+    <!-- Character encoding -->
     <meta charset="UTF-8" />
+    <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Responsive viewport settings -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Page title -->
     <title>Vite + React</title>
   </head>
+
+  <!-- === Body =============================================================== -->
   <body>
+    <!-- Root element for React app -->
     <div id="root"></div>
+    <!-- Main application script -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
